--- a/ui/views/homepage.scss
+++ b/ui/views/homepage.scss
@@ -84,10 +84,6 @@ $view: '.view-homepage';
         display: block;
         width: 100%;
         border: none;
-
-        .row {
-          margin-top: -10px;
-        }
       }
     }
   }
